use 1D Histogram functions written in Cython
Support for Particle Shape Orders 0 and 1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ virtualenv:
 # command to install dependencies
 install:
   - sudo apt-get update -qq
-  - if [[ $TRAVIS_PYTHON_VERSION == "2.7" ]]; then sudo apt-get install python-matplotlib python-scipy; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == "2.7" ]]; then sudo apt-get install python-matplotlib python-scipy python-cython; fi
   - pip install -r pip-requirements.txt
 
 # run tests
