--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ python:
   - "3.4"
   - "3.5"
 
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
 # Install conda
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
