simplify .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,9 @@ python:
   - "3.4"
   - "3.5"
 
-env:
-  - USE_CONDA=true
-
 matrix:
   include:
     - python: "2.7_with_system_site_packages"
-      env:
-        - USE_CONDA=false
       addons:
         apt:
           packages:
@@ -36,18 +31,16 @@ matrix:
 
 # Install conda
 before_install:
-  - if [[ $USE_CONDA == true ]]; then
-      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-        wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-      else
-        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-      fi;
-      chmod +x miniconda.sh;
-      ./miniconda.sh -b -p $HOME/miniconda;
-      export PATH=$HOME/miniconda/bin:$PATH;
-      conda update --yes conda;
-      conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose cython h5py;
-    fi
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi;
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b -p $HOME/miniconda
+  - export PATH=$HOME/miniconda/bin:$PATH
+  - conda update --yes conda
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose cython h5py
 
 install:
   - pip install -r pip-requirements.txt
