add python 3.6 and nightly to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ python:
   - "2.7"
   - "3.4"
   - "3.5"
+  - "3.6"
+  - "nightly"
 
 matrix:
   include:
@@ -28,6 +30,8 @@ matrix:
             - cython
       before_install:
         - pip install -U pip setuptools
+  allow_failures:
+    - python: "nightly"
 
 # Install conda
 before_install:
