--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "nightly"
+  - "3.7-dev"
 
 matrix:
   include:
@@ -31,7 +31,7 @@ matrix:
       before_install:
         - pip install -U pip setuptools
   allow_failures:
-    - python: "nightly"
+    - python: "3.7-dev"
 
 # Install conda
 before_install:
