travis: allow python 3.5 to fail
python 3.5 currently runs into a bug of matplotlib 2.1. May be removed
as this is updated on travis-ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ python:
   - "3.5"
   - "3.6"
 
+matrix:
+  allow_failures:
+    - python: "3.5"
+
 # Install conda
 before_install:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
