--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,14 @@ before_install:
     else
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi;
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      echo "not updating"
+    else
+      conda update --yes conda;
+    fi;
   - chmod +x miniconda.sh
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
-  - conda update --yes conda
   - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose cython h5py numexpr
 
 install:
