--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,13 @@ python:
   - "3.5"
   - "3.6"
 
-#matrix:
-#  allow_failures:
-#    - python: "3.5"
+env:
+  - MATPLOTLIB_V=2*
+  - MATPLOTLIB_V=2.0.2
+
+matrix:
+  allow_failures:
+    - env: MATPLOTLIB_V=2*
 
 # Install conda
 before_install:
@@ -31,7 +35,7 @@ before_install:
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda update --yes conda;
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib=2.0.2 nose cython h5py numexpr
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib=$MATPLOTLIB_V nose cython h5py numexpr
 
 install:
   - pip install -r pip-requirements.txt
