--- a/.travis.yml
+++ b/.travis.yml
@@ -11,19 +11,28 @@ notifications:
     on_failure: change
 
 python:
-  - "2.7"
-# - "3.4"
-  - "3.5"
-  - "3.6"
+  - 2.7
+# - 3.4
+  - 3.5
+  - 3.6
 
 env:
   - MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=*
   - MATPLOTLIB_V=2.0.2 NUMPY_V=* SCIPY_V=* CYTHON_V=*
-  - MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4 # ubuntu 16.04.3 LTS
+   # ubuntu 16.04.3 LTS:
+  - MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
+  # ubuntu 14.04.5 LTS: CYTHON_V=0.20.1 requires python 2.6 in miniconda. Dont required it.
+  - MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.23
 
 matrix:
   allow_failures:
+    # have this allowed as there is a bug in matplotlib 2.1.0
     - env: MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=*
+  exclude:
+    - python: 3.6
+      env: MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
+    - python: 3.6
+      env: MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.20.1
 
 # Install conda
 before_install:
