--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ notifications:
     on_failure: change
 
 python:
+  - 2.6
   - 2.7
 # - 3.4
   - 3.5
@@ -21,8 +22,6 @@ env:
   - MATPLOTLIB_V=2.0.2 NUMPY_V=* SCIPY_V=* CYTHON_V=*
    # ubuntu 16.04.3 LTS:
   - MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
-  # ubuntu 14.04.5 LTS: CYTHON_V=0.20.1 requires python 2.6 in miniconda. Dont required it.
-  - MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.23
 
 matrix:
   allow_failures:
@@ -31,13 +30,15 @@ matrix:
   exclude:
     - python: 3.6
       env: MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
-    - python: 3.6
+  include:
+    # ubuntu 14.04.5 LTS:
+    - python: 2.6
       env: MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.20.1
 
 # Install conda
 before_install:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+  - if [[ $TRAVIS_PYTHON_VERSION -lt 3 ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
     else
       wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi;
@@ -45,7 +46,7 @@ before_install:
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda update --yes conda;
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr libgfortran
 
 install:
   - pip install -r pip-requirements.txt
