--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ notifications:
     on_failure: change
 
 python:
-  - 2.6
   - 2.7
-# - 3.4
   - 3.5
   - 3.6
 
@@ -25,13 +23,11 @@ matrix:
   allow_failures:
     # have this allowed as there is a bug in matplotlib 2.1.0
     - env: MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=*
-  exclude:
-    - python: 2.6
-      env: MATPLOTLIB_V=2.0.2 NUMPY_V=* SCIPY_V=* CYTHON_V=*
   include:
     # ubuntu 14.04.5 LTS:
-    - python: 2.6
-      env: MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.20.1
+    # python 2.6 is explicitly NOT supported!
+    - python: 3.4
+      env: MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.20.1 EXTRAPACK="libgfortran==1"
     # ubuntu 16.04.3 LTS:
     - python: 2.7
       env: MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
@@ -45,7 +41,7 @@ before_install:
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda update --yes conda;
-  - conda create -yn pyenv python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr libgfortran
+  - conda create -yn pyenv python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr $EXTRAPACK
   - source activate pyenv
 
 install:
