--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ style = pep440
 versionfile_source = postpic/_version.py
 versionfile_build = postpic/_version.py
 tag_prefix =
+
+[build_sphinx]
+source-dir = doc/source
+build-dir  = doc/build
+all_files  = 1
