--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
   - MATPLOTLIB_V=2.0.2 NUMPY_V=* SCIPY_V=* CYTHON_V=*
 
 matrix:
+  fast_finish: true
   allow_failures:
     # have this allowed as there is a bug in matplotlib 2.1.0
     - env: MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=*
