--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
     on_failure: change
 
 env:
-  - MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=*
+  - MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=* PYGMENTS_V="=*"
 #  - MATPLOTLIB_V=2.0.2 NUMPY_V=* SCIPY_V=* CYTHON_V=*
 
 jobs:
@@ -39,6 +39,12 @@ jobs:
     - python: 3.6
     - python: 3.7
 
+    # Ubuntu 14.04.5 LTS
+    # python 2.6 is explicitly NOT supported!
+    - name: "Ubuntu 14.04.5 LTS - Python 3.4"
+      python: 3.4
+      env: MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.20.1 EXTRAPACK="libgfortran<3" PYGMENTS_V="<2.4"
+
     # Ubuntu 16.04.3 LTS
     - name: "Ubuntu 16.04.3 LTS - Python 2.7"
       python: 2.7
@@ -62,7 +68,7 @@ before_install:
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda update --yes conda;
-  - conda create -yn pyenv python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr sphinx $EXTRAPACK
+  - conda create -yn pyenv python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr sphinx pygments$PYGMENTS_V $EXTRAPACK
   - source activate pyenv
 
 install:
