--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: run-tests
 
 on: [push]
 
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7]
+        python-version: [3.5, 3.6, 3.7]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,7 +20,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r pip-requirements.txt
-        pip install --user -e .
     - name: run tests
       run: |
         ./run-tests.py
