--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ env:
 
 jobs:
   fast_finish: true
-#  allow_failures:
+  allow_failures:
+  - python: 2.7  # end of life since Jan 1st, 2020.
     # have this allowed as there is a bug in matplotlib 2.1.0
 #    - env: MATPLOTLIB_V=* NUMPY_V=* SCIPY_V=* CYTHON_V=*
   include:
@@ -74,7 +75,6 @@ before_install:
 
 install:
   - pip install -r pip-requirements.txt
-  - python setup.py install
 
 before_script:
   - uname -a
