--- a/.travis.yml
+++ b/.travis.yml
@@ -33,31 +33,12 @@ jobs:
       script: ./run-tests.py --fast
 
     - stage: Tests
-      python: 2.7
-      env: MATPLOTLIB_V=2.2.3
     - python: 3.5
       env: MATPLOTLIB_V=3.0
     - python: 3.6
     - python: 3.7
 
-    # Ubuntu 14.04.5 LTS
-    # python 2.6 is explicitly NOT supported!
-    - name: "Ubuntu 14.04.5 LTS - Python 3.4"
-      python: 3.4
-      env: MATPLOTLIB_V=1.3.1 NUMPY_V=1.8.1 SCIPY_V=0.13.3 CYTHON_V=0.20.1 EXTRAPACK="libgfortran<3" PYGMENTS_V="<2.4"
-
-    # Ubuntu 16.04.3 LTS
-    - name: "Ubuntu 16.04.3 LTS - Python 2.7"
-      python: 2.7
-      env: MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
-    - name: "Ubuntu 16.04.3 LTS - Python 3.5"
-      python: 3.5
-      env: MATPLOTLIB_V=1.5.1 NUMPY_V=1.11.0 SCIPY_V=0.17.0 CYTHON_V=0.23.4
-
     # Ubuntu 18.04 LTS
-    - name: "Ubuntu 18.04 LTS - Python 2.7"
-      python: 2.7
-      env: MATPLOTLIB_V=2.1.1 NUMPY_V=1.13.3 SCIPY_V=0.19.1 CYTHON_V=0.26.1
     - name: "Ubuntu 18.04 LTS - Python 3.6"
       python: 3.6
       env: MATPLOTLIB_V=2.1.1 NUMPY_V=1.13.3 SCIPY_V=0.19.1 CYTHON_V=0.26.1
@@ -70,7 +51,7 @@ before_install:
   - export PATH=$HOME/miniconda/bin:$PATH
   - conda update --yes conda;
   - conda config --append channels anaconda
-  - conda create -yn pyenv python=$TRAVIS_PYTHON_VERSION atlas numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr sphinx pygments$PYGMENTS_V $EXTRAPACK
+  - conda create -yn pyenv python=$TRAVIS_PYTHON_VERSION numpy=$NUMPY_V scipy=$SCIPY_V matplotlib=$MATPLOTLIB_V nose cython=$CYTHON_V h5py numexpr sphinx pygments$PYGMENTS_V $EXTRAPACK
   - source activate pyenv
 
 install:
