--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        python-version: [3.x]
+        python-version: [3.8]
 
 # have to copy steps from above, as anchors are currently
 # not supported by github workflow (Jan 2020).
