gitlab: use one stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,11 @@ image: python:latest
 before_script:
   - python -V  # Print out python version for debugging
 
+stages:
+  - test
 
-test:
+job1:
+  stage: test
   script:
     - python -m pip install -r pip-requirements.txt
     - ./run-tests.py
