--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ VCS = git
 style = pep440
 versionfile_source = postpic/_version.py
 versionfile_build = postpic/_version.py
-tag_prefix =
+tag_prefix = v
 
 [build_sphinx]
 source-dir = doc/source
