--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,42 +6,60 @@ jobs:
   latest:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        python -m venv --system-site-packages env
+        source env/bin/activate
         python -m pip install --upgrade pip
-        pip install -r pip-requirements.txt
+        python -m pip install -r pip-requirements.txt
+        python --version
+        python -c 'import numpy; print(numpy.__version__)'
+        python -c 'import cython; print(cython.__version__)'
+        python ./setup.py develop
+      # python -m pip -vvv install -e .
+      # fails with "ModuleNotFoundError: No module named 'Cython'"
+      # running setup.py directly is just a workaround.
     - name: run tests
       run: |
-        ./run-tests.py
+        source env/bin/activate
+        python run-tests.py --skip-setup
 
   other-os:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        python-version: [3.8]
+        python-version: [3.12]
 
 # have to copy steps from above, as anchors are currently
 # not supported by github workflow (Jan 2020).
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r pip-requirements.txt
+        python -m pip install -r pip-requirements.txt
+        python --version
+        python -c 'import numpy; print(numpy.__version__)'
+        python -c 'import cython; print(cython.__version__)'
+        python ./setup.py develop
+      # python -m pip -vvv install -e .
+      # fails with "ModuleNotFoundError: No module named 'Cython'"
+      # running setup.py directly is just a workaround.
     - name: run tests
       run: |
-        ./run-tests.py
+        python run-tests.py --skip-setup
